# macvox68

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  about_box.c  dialog.r  macvox68_icon.r  macvox68_icons.r  macvox68_size.r  main.c  main_window.c  main_window.h  network.c  network_backend.h  network_backend_classic.c  speech.c  speech.h  ui_input.c  ui_input.h  ui_layout.c  ui_radio.c  ui_slider.c  ui_slider.h  ui_text_fields.c  ui_text_fields.h  ui_theme.c  ui_theme.h  ui_windows.c  ui_windows.h  vox_parser.c  vox_parser.h  window_ui.c
docs/: basilisk2_sound_input_notes.md  default_push_button.md  documentation_lookup_plan.md  flextalk_speech_manager_mapping.md  generate_icon_r.py  icon_generation.md  icon_generation_wins.md  icon_workflow.md  macdevdocs_overlay_map.md  macvox68_ui_porting_notes.md  make_mac_icon_palette_pngs.py  network_architecture_overview.md  network_keepalive_notes.md  opt_reference_notes.md  rez_crash_checklist.md  rez_gotchas.md  slider_style_notes.md  speech_manager_smoketest.md  speech_manager_trap_notes.md  system7_dev_notes.md  threadlib_notes.md  ui_architecture_plan.md  vox_parser_porting_notes.md
docs/artwork/: nettts_icon_base64.txt
docs/tools/: generate_mac_icons.py
icon_raws/: README.md
legacy/: dialog.r
src/: main.c  network.c  network.h  network_backend.h  network_backend_classic.c  network_backend_ot.c  speech.c  speech.h  vox_parser.c  vox_parser.h
src/ui/: about_box.c  about_box.h  main_window.c  main_window.h  ui_app.h  ui_input.c  ui_input.h  ui_layout.c  ui_layout.h  ui_radio.c  ui_radio.h  ui_slider.c  ui_slider.h  ui_text_fields.c  ui_text_fields.h  ui_theme.c  ui_windows.c  ui_windows.h  window_ui.c
tests/: vox_parser_host_checks.c
